2000-11-24  Tim Jenness  <timj@jach.hawaii.edu>

        --- RELEASE V0.11 ----

	* t/tempfile.t: Add a test to make sure the file is present after
	close and another to use tempfile in a scalar context.

	* Temp.pm: Fix bug on NT with O_TEMPORARY causing the file to be
	removed before the program exits. 

        ---- RELEASE V0.10 ----
	
	* Temp.pm: Incorporate fixes up to bleedperl 7825. Cross platform
	fixes.

	* t/security.t: Incorporate fixes from bleedperl 7825 - adds more
	cross platform support and more skips on the basis that this is
	not testing your system security, just the module.

2000-08-16  Tim Jenness  <timj@jach.hawaii.edu>

	* Temp.pm (_gettemp): Dont use VMS::Stdio if we want the file
	to remain after closing.

2000-08-15  Tim Jenness  <timj@jach.hawaii.edu>

	* Temp.pm (_can_do_level): cygwin patch

2000-08-14  Tim Jenness  <timj@jach.hawaii.edu>

	* Temp.pm: Add OPENTEMPFLAGS to support UNLINK=>0
		More tweaks to VMS support (now uses VMS::Stdio)

2000-07-26  Tim Jenness  <timj@jach.hawaii.edu>

	* Release V0.09 to CPAN
	
	* README: Update for V0.09

2000-07-25  Tim Jenness  <timj@jach.hawaii.edu>

	* t/security.t: OS/2 can not do the security tests.

	* Temp.pm: Add Support for VMS and OS/2 

2000-05-15  Tim Jenness  <timj@jach.hawaii.edu>

        * Release V0.08 to CPAN
	
	* t/mktemp.t: Skip the test for unlink0 if it fails since in most
	cases this indicates an NFS problem.

	* Temp.pm (_can_do_level): Add check to make sure an OS can handle 
	the required safe level
	(safe_level): Check the level can be supported before allowing it
	to change 
	(END): Change order of cleanup so that files are removed ahead of
	temp dirs (since files may be in the temp dirs) 

2000-05-08  Tim Jenness  <timj@jach.hawaii.edu>

	* Temp.pm: Reorganize END block 

	* t/tempfile.t: Correct tests for new position of END{} block

	* t/security.t: Correct tests for new position of END{} block

	* t/posix.t: add # to print output
