@@ -1,3 +1,8 @@
+2001-02-21  Timothy Jenness  <t.jenness@jach.hawaii.edu>
+
+	* Temp.pm: Add fix for CGI::Carp
+		- Use error string to propogate reason rather than a carp
+
 2000-11-24  Tim Jenness  <timj@jach.hawaii.edu>
 
         --- RELEASE V0.11 ----
